# rpm-pkg-count

./: Cargo.toml  README.md  build.rs  dprint.json
.github/workflows/: build_and_test.yml
examples/: simple.rs
src/: ffi.rs  ffi_types.rs  lib.rs
