[package]
name = "rpm-pkg-count"
version = "0.2.1"
authors = ["RubixDev"]
categories = ["external-ffi-bindings"]
edition = "2021"
keywords = ["rpm", "librpm", "fetch"]
license = "GPL-3.0-only"
links = "rpm"
repository = "https://github.com/RubixDev/rpm-pkg-count"
description = "Counts installed RPM packages using librpm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

compile-time = ["dep:pkg-config"]
runtime = ["dep:libloading"]

[dependencies]
libloading = { version = "0.8.0", optional = true }

[build-dependencies]
pkg-config = { version = "0.3.27", optional = true }

[package.metadata.docs.rs]
features = ["runtime"]
